--- a/STM Project/Debug/makefile
+++ b/STM Project/Debug/makefile
@@ -60,8 +60,8 @@ all: main-build
 main-build: Traffic_Light_Assignment.elf secondary-outputs
 
 # Tool invocations
-Traffic_Light_Assignment.elf Traffic_Light_Assignment.map: $(OBJS) $(USER_OBJS) D:\STM32CUBE_IDE\BTL\MCU_Assignment\STM\ Project\STM32F103RBTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "Traffic_Light_Assignment.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"D:\STM32CUBE_IDE\BTL\MCU_Assignment\STM Project\STM32F103RBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Traffic_Light_Assignment.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+Traffic_Light_Assignment.elf Traffic_Light_Assignment.map: $(OBJS) $(USER_OBJS) C:\Users\Admin\Desktop\MCU_Assignment\MCU_Assignment\STM\ Project\STM32F103RBTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "Traffic_Light_Assignment.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\Admin\Desktop\MCU_Assignment\MCU_Assignment\STM Project\STM32F103RBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Traffic_Light_Assignment.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
